Fixing links in the tutorial

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)http://bnfc.digitalgrammars.com/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>The BNF Converter</title>
-<link rel="stylesheet" title="GF" href="http://www.grammaticalframework.org/css/style.css">
-<link rel="stylesheet" title="GF" href="bootstrap.min.css">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+    <title>The BNF Converter</title>
+    <link rel="stylesheet" title="GF" href="http://www.grammaticalframework.org/css/style.css">
+    <link rel="stylesheet" title="GF" href="bootstrap.min.css">
 <style>
   table td { border: none; }
 </style>
@@ -151,10 +152,10 @@ language </li>
 <h2>Documentation</h2>
 <ul>
 
-  <li><a href="http://bnfc.digitalgrammars.com/doc/tutorial/bnfc-tutorial.html">Tutorial</a> </li>
+  <li><a href="./tutorial.html">Tutorial</a> </li>
   
   <li><a
-  href="http://bnfc.digitalgrammars.com/doc/LBNF-report.pdf">Reference Manual</a>
+  href="./LBNF-report.pdf">Reference Manual</a>
 
   <li>  <a href="http://www.digitalgrammars.com/ipl-book/">Implementing Programming Languages</a>, a 
     compiler book using BNFC.
