--- a/tutorial.html
+++ b/tutorial.html
@@ -60,17 +60,9 @@ BNFC also scales up to legacy programming languages
 <LI>but some languages have rough corners (e.g. Haskell)
 </UL>
 
-<P>
-<!-- NEW -->
-</P>
 <H2>How to obtain BNFC</H2>
-<P>
-BNFC homepage: 
-<A HREF="http://www.cse.chalmers.se/research/group/Language-technology/BNFC/"><CODE>http://www.cse.chalmers.se/research/group/Language-technology/BNFC/</CODE></A>
-</P>
-<P>
-You can obtain
-</P>
+<p>BNFC homepage: <a href="http://bnfc.digitalgrammars.com/">http://bnfc.digitalgrammars.com/</a></p>
+<p>You can obtain</p>
 <UL>
 <LI>a Windows binary
 <LI>a Linux (i386) binary
@@ -86,32 +78,17 @@ package system (but it is a slightly older version).
 For the binaries, it is enough to download them and put into a place where you
 can find executables (such as <CODE>/usr/local/bin</CODE> on Unix-like platforms).
 </P>
-<P>
-<!-- NEW -->
-</P>
-<H2>Working with BNFC sources</H2>
-<P>
-If you choose the source package, you need the 
-<A HREF="http://www.haskell.org/ghc/">GHC Haskell Compiler</A>. With GHC in place,
-just unpack the sources, <CODE>cd</CODE> to <CODE>BNFC</CODE>, and type <CODE>make</CODE>.
-</P>
+
+<h2>Working with BNFC sources</h2>
+<p>If you choose the source package, you need the <a href="http://www.haskell.org/ghc/">GHC Haskell Compiler</a>. With GHC in place, just unpack the sources, <code>cd</code> to <code>BNFC</code>, and type <code>make</code>.</p>
 <P>
 If you want to contribute to BNFC (12 persons have!), make sure you use the
 latest Darcs version: give the command
 </P>
-<PRE>
-    darcs get --partial http://www.cs.chalmers.se/Cs/Research/Language-technology/darcs/BNFC/
-</PRE>
-<P>
-This requires the version control system 
-<A HREF="http://darcs.net">Darcs</A>. Contributions can be sent in email as darcs patches.
-</P>
-<P>
-BNFC is licensed under GPL.
-</P>
-<P>
-<!-- NEW -->
-</P>
+<PRE>git clone https://github.com/BNFC/bnfc.git</PRE>
+
+<P> BNFC is licensed under GPL.  </P>
+
 <H2>Calling BNFC</H2>
 <P>
 When you have BNFC in place (i.e. on your path), you can all it by
@@ -1339,14 +1316,9 @@ All grammars: conflicts. Use parser diagnosis tools to find and solve them!
 <!-- NEW -->
 </P>
 <H2>Further reading</H2>
-<P>
-BNFC homepage: 
-<A HREF="http://digitalgrammars.com/bnfc"><CODE>digitalgrammars.com/bnfc</CODE></A>
-</P>
-<P>
-The LBNF report, covering the whole Labelled BNF grammar language used in BNFC:
-<A HREF="http://digitalgrammars.com/bnfc/doc/LBNF-report.pdf"><CODE>digitalgrammars.com/bnfc/doc/LBNF-report.pdf</CODE></A>
-</P>
+
+<p>BNFC homepage: <a href="http://bnfc.digitalgrammars.com/">http://bnfc.digitalgrammars.com/</a></p>
+<p>The <a href="./LBNF-report.pdf">LBNF report</a>, covering the whole Labelled BNF grammar language used in BNFC:</p>
 <P>
 Chalmers Programming Languages course notes:
 <A HREF="http://www.cs.chalmers.se/Cs/Grundutb/Kurser/progs/current/"><CODE>www.cs.chalmers.se/Cs/Grundutb/Kurser/progs/current/</CODE></A> 
