Add link to downloads

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 
           </style>
           <div class="row">
-            <span class="span2 "><a class="btn btn-block icon linux" href="#">Linux</a></span>
-            <span class="span2 "><a class="btn btn-block icon mac" href="#">Mac</a></span>
-            <span class="span2 "><a class="btn btn-block icon win" href="#">Windows</a></span>
-            <span class="span2 "><a class="btn btn-block icon tar" href="#">Sources</a></span>
+            <span class="span2 "><a class="btn btn-block icon linux" href="./download/bnfc-latest-linux.gz">Linux</a></span>
+            <span class="span2 "><a class="btn btn-block icon mac" href="./download/bnfc-latest-mac.gz">Mac</a></span>
+            <span class="span2 "><a class="btn btn-block icon win" href="./download/bnfc-latest-win.exe">Windows</a></span>
+            <span class="span2 "><a class="btn btn-block icon tar" href="./download/bnfc-latest.tar.gz">Sources</a></span>
           </div>
         </div>
         <div class="tab-pane" id="cabal">
