Link to the actual files (github pages does not support symlinks?)

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
           </style>
           <div class="row">
-            <span class="span2 "><a class="btn btn-block icon linux" href="./download/bnfc-latest-linux-i386.gz">Linux (32 bits)</a></span>
-            <span class="span2 "><a class="btn btn-block icon linux" href="./download/bnfc-latest-linux-amd64.gz">Linux (64 bits)</a></span>
-            <span class="span2 "><a class="btn btn-block icon mac" href="./download/bnfc-latest-mac.gz">Mac</a></span>
-            <span class="span2 "><a class="btn btn-block icon win" href="./download/bnfc-latest-win.exe">Windows</a></span>
-            <span class="span2 "><a class="btn btn-block icon tar" href="./download/bnfc-latest-src.tar.gz">Sources</a></span>
+            <span class="span2 "><a class="btn btn-block icon linux" href="./download/bnfc-2.5.0-linux-i386.gz">Linux (32 bits)</a></span>
+            <span class="span2 "><a class="btn btn-block icon linux" href="./download/bnfc-2.5.0-linux-amd64.gz">Linux (64 bits)</a></span>
+            <span class="span2 "><a class="btn btn-block icon mac" href="./download/bnfc-2.5.0-mac.gz">Mac</a></span>
+            <span class="span2 "><a class="btn btn-block icon win" href="./download/bnfc-2.5.0-win.exe">Windows</a></span>
+            <span class="span2 "><a class="btn btn-block icon tar" href="./download/bnfc-2.5.0-src.tar.gz">Sources</a></span>
           </div>
         </div>
         <div class="tab-pane" id="cabal">
