--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@ bnfc -ocaml   Calc.bnfc
 
 <h2>Large examples</h2>
 
-<p>A <a href="http://bnfc.digitalgrammars.com/doc/examples/C.cf">grammar of C</a>. An <a href="http://bnfc.digitalgrammars.com/doc/examples/runtime.c">example C file</a> parsable in type <tt>Program</tt>.
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/C.cf">grammar of C</a>. An <a href="https://github.com/BNFC/bnfc/blob/master/examples/runtime.c">example C file</a> parsable in type <tt>Program</tt>.
 </p>
-<p>A <a href="http://bnfc.digitalgrammars.com/doc/examples/Alfa.cf">grammar of Alfa</a>
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/Alfa.cf">grammar of Alfa</a>
 (For more details, see the <a href="http://www.cse.chalmers.se/~hallgren/Alfa/">Alfa home page</a>.)
 </p>
-<p>A <a href="http://bnfc.digitalgrammars.com/doc/examples/LBNF.cf">grammar of LBNF</a>. It is at the
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/LBNF.cf">grammar of LBNF</a>. It is at the
 same
 time an example LBNF file, parsable in type <tt>Grammar</tt>. This
 grammar is used in the implementation of the BNF Converter.<br>
@@ -217,9 +217,9 @@ of Java 1.1</a> developed by <a href="http://people.cs.uchicago.edu/~mrainey/">M
 
 <h2>Authors</h2>
 
-©
-    Jonas Almström Duregård, Krasimir Angelov, Jean-Philippe Bernardy, Björn Bringert, Johan Broberg, Paul Callaghan,
-    Grégoire Détrez, Markus Forsberg, Ola Frid, Peter Gammie, Thomas Hallgren, Patrik Jansson,
+ï¿½
+    Jonas Almstrï¿½m Duregï¿½rd, Krasimir Angelov, Jean-Philippe Bernardy, Bjï¿½rn Bringert, Johan Broberg, Paul Callaghan,
+    Grï¿½goire Dï¿½trez, Markus Forsberg, Ola Frid, Peter Gammie, Thomas Hallgren, Patrik Jansson,
     Kristofer Johannisson, Antti-Juhani Kaijanaho, Ulf Norell,
     Michael Pellauer and Aarne Ranta 2002 - 2013.
 
