Fix the clone url

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="tab-pane" id="git">
           <p>Current development code (Source repository on <a href="https://github.com/BNFC/bnfc">GitHub</a>)
-          <pre>$ git clone https://github.org/BNFC/bnfc</pre>
+          <pre>$ git clone https://github.com/BNFC/bnfc</pre>
         </div>
       </div>
                    
