--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="span3">
     <h2>News</h2>
     <ul>
-      <li>2013-03-01: <a href="http://bnfc.digitalgrammars.com/download/bnfc-2.5.0-src.tgz">BNFC 2.5</a> released.
+      <li>2013-03-01: <a href="http://bnfc.digitalgrammars.com/download/bnfc-2.5.0-src.tar.gz">BNFC 2.5</a> released.
       <li>2012-07-13: <a href="http://www.digitalgrammars.com/ipl-book/">Implementing Programming Languages</a>, a compiler book using BNFC.</li>
     </ul>
   </div>
