--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ layout: default
     </ul>
 
     <h3>Mailing list</h3>
-    <p>Send questions, bug reports, usage news, etc, to our <a href="https://groups.google.com/group/bnfc-dev?hl=en">Google group</a>.
+    <p>Send questions, bug reports, usage news, etc, to our
+       <a href="{{site.urls.googlegroup}}">Google group</a>.
   </div>
   <div class="col-md-3 col-md-offset-1">
     <h2>Book</h2>
