--- a/download/index.html
+++ b/download/index.html
@@ -2,5 +2,14 @@
 layout: default
 ---
 {% for release in site.categories['releases'] %}
+<h3>BNFC {{ release.version }}</h3>
+<div class="row">
+  <div class="col-md-6">
     {% include download-links.html release=release %}
+  </div>
+  <div class="col-md-6">
+    <h4>Release notes</h4>
+    {{ release.content }}
+  </div>
+</div>
 {% endfor %}
