--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ layout: default
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="packages">
+          <h4>BNFC {{release.version}}</h4>
           {% include download-links.html release=release %}
         </div>
         <div class="tab-pane" id="cabal">
