Update the examples' URLs

--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@ bnfc -ocaml   Calc.bnfc
 
 <h2>Large examples</h2>
 
-<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/C.cf">grammar of C</a>. An <a href="https://github.com/BNFC/bnfc/blob/master/examples/runtime.c">example C file</a> parsable in type <tt>Program</tt>.
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/C/C.cf">grammar of C</a>.
+   An <a href="https://github.com/BNFC/bnfc/blob/master/examples/C/runtime.c">example C file</a> parsable in type <tt>Program</tt>.
 </p>
-<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/Alfa.cf">grammar of Alfa</a>
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/Alfa/Alfa.cf">grammar of Alfa</a>
 (For more details, see the <a href="http://www.cse.chalmers.se/~hallgren/Alfa/">Alfa home page</a>.)
 </p>
-<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/LBNF.cf">grammar of LBNF</a>. It is at the
+<p>A <a href="https://github.com/BNFC/bnfc/blob/master/examples/LBNF/LBNF.cf">grammar of LBNF</a>. It is at the
 same
 time an example LBNF file, parsable in type <tt>Grammar</tt>. This
 grammar is used in the implementation of the BNF Converter.<br>
